--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@fontsource/poppins": "^5.2.5",
     "@tailwindcss/vite": "^4.0.11",
     "astro": "^5.4.2",
+    "leaflet": "^1.9.4",
     "tailwindcss": "^4.0.11"
   }
 }
