--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@fontsource/poppins": "^5.2.5",
     "@tailwindcss/vite": "^4.0.11",
     "astro": "^5.4.2",
+    "clsx": "^2.1.1",
     "leaflet": "^1.9.4",
+    "motion": "^12.5.0",
+    "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.11"
   }
 }
